fix font weight for signup email spacing

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -17,7 +17,7 @@
   margin-top: 20px;
 
   @media (min-width: $md) {
-    margin-top: 50px;
+    margin-top: 30px;
   }
 }
 
@@ -82,6 +82,6 @@
   justify-content: center;
 }
 
-.footer__social-icon {
-  margin: 0 10px;
+.footer__social-icon:not(:first-child) {
+  margin-left: 20px;
 }
