--- a/src/components/SubscribeForm/SubscribeForm.scss
+++ b/src/components/SubscribeForm/SubscribeForm.scss
@@ -36,6 +36,7 @@
     background: transparent;
     font-size: 14px;
     font-family: $font;
+    font-weight: 100;
 
     @media (min-width: $md) {
       font-size: 18px;
